@@ -15,6 +15,7 @@ v 1.4.0 (unreleased)
   - added fixture for testing unconfirmed users.
   - added french translation catalogues.
   - added support for adding confirmed users to a default group.
+  - added support for rendering command mails via templating service.
 
 v 1.3.0 (unreleased)
   - fixed an issue with executing migrations / fixtures even if none existed
